// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AddOrEditNoteScreen Add 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#f7f7f8",
          "flex": 1,
        },
      ]
    }
  >
    <View
      collapsable={undefined}
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Object {
          "backgroundColor": "#281946",
          "borderBottomColor": "#A7A7AA",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={undefined}
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "bottom": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "left": 70,
                "opacity": 1,
                "position": "absolute",
                "right": 70,
                "top": 0,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "alignSelf": "center",
                    "color": "white",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 17.5,
                  },
                ]
              }
            >
              Add Note
            </Text>
          </View>
          <View
            collapsable={undefined}
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "bottom": 0,
                "flexDirection": "row",
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "top": 0,
              }
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              collapsable={undefined}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginLeft": 6,
                  "opacity": 1,
                  "padding": 10,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Image
                source={1}
                style={null}
              />
            </View>
          </View>
          <View
            collapsable={undefined}
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "bottom": 0,
                "flexDirection": "row",
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              collapsable={undefined}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginRight": 6,
                  "opacity": 0.2,
                  "padding": 10,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "white",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                    },
                  ]
                }
              >
                Save
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
          ]
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#3c3c3c",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 12.5,
                  },
                  Object {
                    "paddingLeft": 16,
                  },
                ]
              }
            >
              Monday 1/1/18 
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#3c3c3c",
                    "fontFamily": "OpenSans-Bold",
                    "fontSize": 12.5,
                  },
                ]
              }
            >
              9:41 am
            </Text>
          </View>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#627cff",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 12.5,
                },
                Object {
                  "paddingRight": 16,
                },
              ]
            }
          >
            Edit
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#989898",
            "height": 0.5,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "height": 64,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "alignItems": "center",
          }
        }
        horizontal={true}
        keyboardShouldPersistTaps="always"
        style={
          Array [
            Object {
              "backgroundColor": "#f7f7f8",
              "flex": 1,
              "flexDirection": "row",
            },
          ]
        }
      >
        <View>
          <View
            style={
              Array [
                Object {
                  "padding": 6,
                },
              ]
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#a7a7a7",
                    "borderRadius": 18,
                    "borderWidth": 1,
                    "height": 36,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                    "paddingRight": 8,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                      "padding": 4,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                #exercise
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "padding": 6,
                },
              ]
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#a7a7a7",
                    "borderRadius": 18,
                    "borderWidth": 1,
                    "height": 36,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                    "paddingRight": 8,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                      "padding": 4,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                #meal
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "padding": 6,
                },
              ]
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#a7a7a7",
                    "borderRadius": 18,
                    "borderWidth": 1,
                    "height": 36,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                    "paddingRight": 8,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                      "padding": 4,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                #sitechange
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "padding": 6,
                },
              ]
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#a7a7a7",
                    "borderRadius": 18,
                    "borderWidth": 1,
                    "height": 36,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                    "paddingRight": 8,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                      "padding": 4,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                #sensorchange
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "padding": 6,
                },
              ]
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#a7a7a7",
                    "borderRadius": 18,
                    "borderWidth": 1,
                    "height": 36,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                    "paddingRight": 8,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                      "padding": 4,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                #juicebox
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "padding": 6,
                },
              ]
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#a7a7a7",
                    "borderRadius": 18,
                    "borderWidth": 1,
                    "height": 36,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                    "paddingRight": 8,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                      "padding": 4,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                #devicesetting
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#989898",
            "height": 0.5,
          },
        ]
      }
    />
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
            "height": null,
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={false}
        autoCapitalize="sentences"
        autoCorrect={true}
        keyboardAppearance="dark"
        keyboardType="default"
        multiline={true}
        onChangeText={[Function]}
        onContentSizeChange={undefined}
        onFocus={[Function]}
        onSelectionChange={[Function]}
        placeholder="What’s going on?"
        returnKeyType="default"
        selectionColor="#657ef6"
        style={
          Array [
            Object {
              "color": "#3c3c3c",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 15,
            },
            Object {
              "flex": null,
              "paddingBottom": 7,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 7,
            },
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TextInput
      allowFontScaling={false}
      keyboardAppearance="dark"
      keyboardType="default"
      onFocus={[Function]}
      returnKeyType="default"
      style={
        Array [
          Object {
            "height": 0,
            "width": 0,
          },
        ]
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`Storyshots AddOrEditNoteScreen Edit 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#f7f7f8",
          "flex": 1,
        },
      ]
    }
  >
    <View
      collapsable={undefined}
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Object {
          "backgroundColor": "#281946",
          "borderBottomColor": "#A7A7AA",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={undefined}
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "bottom": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "left": 70,
                "opacity": 1,
                "position": "absolute",
                "right": 70,
                "top": 0,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "alignSelf": "center",
                    "color": "white",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 17.5,
                  },
                ]
              }
            >
              Edit Note
            </Text>
          </View>
          <View
            collapsable={undefined}
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "bottom": 0,
                "flexDirection": "row",
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "top": 0,
              }
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              collapsable={undefined}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginLeft": 6,
                  "opacity": 1,
                  "padding": 10,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Image
                source={1}
                style={null}
              />
            </View>
          </View>
          <View
            collapsable={undefined}
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "bottom": 0,
                "flexDirection": "row",
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              collapsable={undefined}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginRight": 6,
                  "opacity": 0.2,
                  "padding": 10,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "white",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                    },
                  ]
                }
              >
                Save
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
          ]
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#3c3c3c",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 12.5,
                  },
                  Object {
                    "paddingLeft": 16,
                  },
                ]
              }
            >
              Monday 1/1/18 
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#3c3c3c",
                    "fontFamily": "OpenSans-Bold",
                    "fontSize": 12.5,
                  },
                ]
              }
            >
              9:41 am
            </Text>
          </View>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#627cff",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 12.5,
                },
                Object {
                  "paddingRight": 16,
                },
              ]
            }
          >
            Edit
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#989898",
            "height": 0.5,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "height": 64,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "alignItems": "center",
          }
        }
        horizontal={true}
        keyboardShouldPersistTaps="always"
        style={
          Array [
            Object {
              "backgroundColor": "#f7f7f8",
              "flex": 1,
              "flexDirection": "row",
            },
          ]
        }
      >
        <View>
          <View
            style={
              Array [
                Object {
                  "padding": 6,
                },
              ]
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#a7a7a7",
                    "borderRadius": 18,
                    "borderWidth": 1,
                    "height": 36,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                    "paddingRight": 8,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                      "padding": 4,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                #exercise
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "padding": 6,
                },
              ]
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#a7a7a7",
                    "borderRadius": 18,
                    "borderWidth": 1,
                    "height": 36,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                    "paddingRight": 8,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                      "padding": 4,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                #meal
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "padding": 6,
                },
              ]
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#a7a7a7",
                    "borderRadius": 18,
                    "borderWidth": 1,
                    "height": 36,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                    "paddingRight": 8,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                      "padding": 4,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                #sitechange
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "padding": 6,
                },
              ]
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#a7a7a7",
                    "borderRadius": 18,
                    "borderWidth": 1,
                    "height": 36,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                    "paddingRight": 8,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                      "padding": 4,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                #sensorchange
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "padding": 6,
                },
              ]
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#a7a7a7",
                    "borderRadius": 18,
                    "borderWidth": 1,
                    "height": 36,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                    "paddingRight": 8,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                      "padding": 4,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                #juicebox
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "padding": 6,
                },
              ]
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#a7a7a7",
                    "borderRadius": 18,
                    "borderWidth": 1,
                    "height": 36,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                    "paddingRight": 8,
                  },
                ]
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 17,
                      "padding": 4,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                #devicesetting
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#989898",
            "height": 0.5,
          },
        ]
      }
    />
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
            "height": null,
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={false}
        autoCapitalize="sentences"
        autoCorrect={true}
        keyboardAppearance="dark"
        keyboardType="default"
        multiline={true}
        onChangeText={[Function]}
        onContentSizeChange={undefined}
        onFocus={[Function]}
        onSelectionChange={[Function]}
        placeholder="What’s going on?"
        returnKeyType="default"
        selectionColor="#657ef6"
        style={
          Array [
            Object {
              "color": "#3c3c3c",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 15,
            },
            Object {
              "flex": null,
              "paddingBottom": 7,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 7,
            },
          ]
        }
        underlineColorAndroid="transparent"
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#3c3c3c",
                "fontFamily": "OpenSans-Bold",
                "fontSize": 15,
              },
            ]
          }
        >
          #hashtag1
        </Text>
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#3c3c3c",
                "fontFamily": "OpenSans-Regular",
                "fontSize": 15,
              },
            ]
          }
        >
           This should not show up in comments. Quis molestiae tempora eligendi omnis quisquam quisquam quos. Dolor voluptatibus velit nobis culpa deleniti. Reprehenderit in nisi et. Quia odio et inventore eligendi in deserunt id. Sit odio quia vitae provident quo provident molestiae.
        </Text>
      </TextInput>
    </View>
    <TextInput
      allowFontScaling={false}
      keyboardAppearance="dark"
      keyboardType="default"
      onFocus={[Function]}
      returnKeyType="default"
      style={
        Array [
          Object {
            "height": 0,
            "width": 0,
          },
        ]
      }
    />
  </View>
</RCTSafeAreaView>
`;
